# nebula-tunes

./: Cargo.toml  README.md  config_sys.toml  deny.toml  vcpkg-configuration.json  vcpkg.json
.cargo/: config.toml
.github/workflows/: cargo-deny.yml  rust.yml  update-vcpkg.yml
core/: Cargo.toml
core/src/: config.rs  entry.rs  game_page.rs  game_page_builder.rs  lib.rs  logging.rs  loops.rs  main.rs  pages.rs  pages_manager.rs  tex.wgsl  title_page.rs
core/src/chart/: bms.rs
core/src/loops/: key_map.rs  main_loop.rs  visual.rs
core/src/loops/visual/: bga.rs  gpu.rs  note.rs  texture_pool.rs
core/src/media/: ffmpeg.rs  image.rs
core/src/media/ffmpeg/: decoder.rs  ffmpeg_impl.rs  frame_queue.rs  texture_manager.rs
src/: archive_plugin.rs  chart.rs  components.rs  config.rs  entry.rs  filesystem.rs  graphics.rs  lib.rs  logging.rs  loops.rs  main.rs  plugins.rs  rect.wgsl  resources.rs  schedule.rs  test_archive_plugin.rs  tex.wgsl
src/chart/: bms.rs
src/entry/: visual_app.rs  winit.rs
src/graphics/: triangle.wgsl
src/loops/: audio.rs  main_loop.rs  mod.rs  visual.rs
src/loops/visual/: bga.rs  note.rs
src/loops/visual/video/: decoder.rs  mod.rs  texture_manager.rs
src/media/: image.rs  mod.rs
src/media/ffmpeg/: decoder.rs  ffmpeg_impl.rs  frame_queue.rs  mod.rs
src/plugins/: audio_manager.rs  audio_trigger.rs  bms_processor.rs  mod.rs  note_renderer.rs  time_system.rs
tests/: zip_cli.rs
winit/: Cargo.toml
winit/src/: app.rs  lib.rs  main.rs
