[package]
name = "nebula-tunes"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "BMS (Be-Music Source) difficulty table parser & fetcher"
authors = ["MiyakoMeow"]
repository = "https://github.com/MiyakoMeow/nebula-tunes"
documentation = "https://docs.rs/nebula-tunes"
categories = ["games"]
keywords = ["bms"]

[dependencies]
anyhow = "1"
async-fs = "2"
bms-rs = { git = "https://github.com/MikuroXina/bms-rs" }
bytemuck = "1"
chardetng = "0.1"
encoding_rs = "0.8"
futures-lite = "2"
gametime = { version = "0.7", features = ["global_reference"] }
image = "0.25"
rodio = "0.21"
serde = { version = "1", features = ["derive"] }
toml = "0.9"

[target.'cfg(target_os = "wasi")'.dependencies]
getrandom = "0.3"
wgpu = { version = "28", features = ["serde"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive"] }
winit = { version = "0.30", features = ["serde"] }

[target.'cfg(all(not(target_arch = "wasm32"), target_os = "macos"))'.dependencies]
wgpu = { version = "28", default-features = false, features = [
  "serde",
  "metal",
  "wgsl",
] }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "macos")))'.dependencies]
wgpu = { version = "28", default-features = false, features = [
  "serde",
  "vulkan",
  "wgsl",
] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
# Documentation & API
doc_markdown = "warn"
missing_errors_doc = "warn"
missing_docs_in_private_items = "warn"

# API semantics & usability
must_use_candidate = "warn"
must_use_unit = "warn"
missing_const_for_fn = "warn"
missing_const_for_thread_local = "warn"
default_trait_access = "warn"
option_option = "warn"
ptr_arg = "warn"
incompatible_msrv = "warn"
panic_in_result_fn = "warn"

# Borrowing & cloning
redundant_clone = "warn"
clone_on_copy = "warn"
implicit_clone = "warn"
unnecessary_to_owned = "warn"
needless_borrow = "warn"
needless_borrows_for_generic_args = "warn"
needless_borrowed_reference = "warn"
trivially_copy_pass_by_ref = "warn"

# Code style
redundant_closure_for_method_calls = "warn"
redundant_closure = "warn"
redundant_closure_call = "warn"
redundant_else = "warn"
redundant_feature_names = "warn"
semicolon_if_nothing_returned = "warn"
module_name_repetitions = "warn"
match_bool = "warn"
#match_same_arms = "warn"
collapsible_match = "warn"
option_if_let_else = "warn"
manual_map = "warn"
manual_filter = "warn"
bind_instead_of_map = "warn"
needless_range_loop = "warn"
shadow_unrelated = "warn"
macro_use_imports = "warn"
explicit_deref_methods = "warn"
significant_drop_in_scrutinee = "warn"

# Numeric comparisons
float_cmp = "warn"

# Concurrency & async
await_holding_lock = "warn"
async_yields_async = "warn"
future_not_send = "warn"
large_futures = "warn"
if_let_mutex = "warn"

# Performance & memory
manual_memcpy = "warn"

# Modules & imports
wildcard_imports = "warn"

# Safety & error handling
unwrap_used = "warn"
expect_used = "warn"
unnecessary_unwrap = "warn"
unreachable = "warn"
indexing_slicing = "warn"
