[package]
name = "nebula-tunes"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1"
encoding_rs = "0.8"
chardetng = "0.1"
futures-lite = "2"
async-fs = "2"
clap = { version = "4", features = ["derive"] }
gametime = { version = "0.7.2", features = ["global_reference"] }
num-traits = "0.2.19"

[dependencies.bevy]
version = "0.17"
default-features = false
features = [
    "std",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_image",
    "bevy_camera",
    "bevy_window",
    "bevy_winit",
    "wav",
    "mp3",
    "flac",
    "vorbis",
]

[dependencies.bms-rs]
git = "https://github.com/MikuroXina/bms-rs"

# Platform-specific winit configuration
[target.'cfg(target_os = "linux")'.dependencies.winit]
version = "0.30"
features = ["x11", "wayland"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
