[package]
name = "nebula-tunes"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "BMS (Be-Music Source) difficulty table parser & fetcher"
authors = ["MiyakoMeow"]
repository = "https://github.com/MiyakoMeow/nebula-tunes"
documentation = "https://docs.rs/nebula-tunes"
categories = ["games"]
keywords = ["bms"]

[dependencies]
anyhow = { workspace = true }
async-fs = { workspace = true }
bms-rs = { workspace = true }
bytemuck = { workspace = true }
chardetng = { workspace = true }
encoding_rs = { workspace = true }
ffmpeg-next = { workspace = true }
futures-lite = { workspace = true }
gametime = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
rodio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "wasi")'.dependencies]
getrandom = { workspace = true }
wgpu = { version = "28", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { workspace = true }
tracing-subscriber = { workspace = true }
winit = { workspace = true }

[target.'cfg(all(not(target_arch = "wasm32"), target_os = "macos"))'.dependencies]
wgpu = { version = "28", default-features = false, features = [
  "serde",
  "metal",
  "wgsl",
] }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "macos")))'.dependencies]
wgpu = { version = "28", default-features = false, features = [
  "serde",
  "vulkan",
  "wgsl",
] }

[lints]
workspace = true
