[package]
name = "nebula-tunes"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
async-fs = { workspace = true }
bms-rs = { workspace = true }
bytemuck = { workspace = true }
chardetng = { workspace = true }
encoding_rs = { workspace = true }
ffmpeg-next = { workspace = true }
futures-lite = { workspace = true }
gametime = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
rodio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "wasi")'.dependencies]
getrandom = { workspace = true }
wgpu = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = { workspace = true }
wgpu = { workspace = true, features = ["webgl"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(all(not(target_arch = "wasm32"), target_os = "macos"))'.dependencies]
wgpu = { workspace = true, features = ["metal"] }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "macos")))'.dependencies]
wgpu = { workspace = true, features = ["vulkan"] }

[lints]
workspace = true
