[package]
name = "nebula-tunes"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
anyhow = { workspace = true }
async-fs = { workspace = true }
bms-rs = { workspace = true }
bytemuck = { workspace = true }
chardetng = { workspace = true }
dashmap = { workspace = true }
encoding_rs = { workspace = true }
ffmpeg-next = { workspace = true }
futures-lite = { workspace = true }
gametime = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
num = { workspace = true }

rodio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }
rfd = "0.15"

[target.'cfg(not(target_os = "macos"))'.dependencies]
wgpu = { workspace = true, features = ["vulkan"] }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { workspace = true, features = ["metal"] }

[lints]
workspace = true
