[package]
name = "nebula-tunes-winit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
nebula-tunes = { path = "../core", version = "0.1.0" }
anyhow = { workspace = true }
futures-lite = { workspace = true }
tracing = { workspace = true }
serde_json = "1"
clap = { workspace = true }

# Desktop-only dependencies
winit = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version = "28", features = ["serde"] }

[target.'cfg(all(not(target_arch = "wasm32"), target_os = "macos"))'.dependencies]
wgpu = { version = "28", default-features = false, features = [
  "serde",
  "metal",
  "wgsl",
] }

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "macos")))'.dependencies]
wgpu = { version = "28", default-features = false, features = [
  "serde",
  "vulkan",
  "wgsl",
] }

[lints]
workspace = true
