[package]
name = "nebula-tunes-winit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
nebula-tunes = { path = "../core", version = "0.1.0" }

anyhow = { workspace = true }
clap = { workspace = true }
futures-lite = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Desktop-only dependencies
winit = { workspace = true }

[lints]
workspace = true
